# eve_rebellion_rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
assets/models/: breacher.glb  executioner.glb  incursus.glb  kestrel.glb  merlin.glb  probe.glb  punisher.glb  rifter.glb  slasher.glb  tormentor.glb  tristan.glb
config/: bosses_campaign.json  dialogue_elder.json  enemies_amarr.json
docs/: NARRATIVE_DESIGN.md
games/caldari_gallente/: README.md
games/caldari_gallente/config/: module.json
src/: main.rs
src/assets/: mod.rs  powerup_icons.rs  ship_models.rs  ship_sprites.rs
src/core/: campaign.rs  constants.rs  events.rs  factions.rs  game_state.rs  mod.rs  resources.rs  save.rs
src/entities/: boss.rs  collectible.rs  drone.rs  enemy.rs  mod.rs  player.rs  projectile.rs  wingman.rs
src/games/: mod.rs
src/games/caldari_gallente/: campaign.rs  last_stand.rs  mod.rs  ships.rs
src/games/elder_fleet/: mod.rs  ships.rs
src/systems/: ability.rs  audio.rs  boss.rs  campaign.rs  collision.rs  dialogue.rs  effects.rs  joystick.rs  maneuvers.rs  mod.rs  scoring.rs  scoring_v2.rs  spawning.rs
src/ui/: backgrounds.rs  capacitor.rs  hud.rs  menu.rs  mod.rs
