[package]
name = "eve_rebellion"
version = "1.0.1"
edition = "2021"
authors = ["ARETE"]
description = "EVE Online arcade shooter suite - Rust/Bevy rewrite"
license = "MIT"
repository = "https://github.com/AreteDriver/EVE_Rebellion"

[dependencies]
# Game Engine
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "vorbis",
    "wav",
] }

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.15", default-features = false, features = ["x11", "wayland"] }
# Note: bevy_gilrs (gamepad) needs libudev-dev, bevy_audio needs libasound2-dev

# UI
bevy_egui = "0.31"

# Input - disabled for now, using raw bevy input instead
# leafwing-input-manager = "0.16"

# Async/HTTP for ESI
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Directories
dirs = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
rand = "0.8"
fastrand = "2"
libc = "0.2"

# Audio generation
hound = "3.5"

# Image loading (EVE server returns JPEG despite .png extension)
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
